# gnome-pomodoro-tracking

./: .gitignore  README.md  pyproject.toml
docs/: clockify.md  contrib.md  odoo.md  toggl.md
gnome_pomodoro_tracking/: __init__.py  __main__.py  utils.py
gnome_pomodoro_tracking/core/: cli.py  config.py  frontend_manager.py  plugin_manager.py  tracker.py
gnome_pomodoro_tracking/frontends/: __init__.py  base.py  entry_time.py  gnome_pomodoro.py
gnome_pomodoro_tracking/plugins/: base.py  clockify.py  odoo.py  toggl.py
tests/: test_clockify.py  test_entry_time.py  test_odoo.py  test_plugin.py  test_toggl.py
